# chesscog-app

./: Dockerfile  README.md  docker-compose-dev.yml  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  heroku.Dockerfile  heroku_deploy.sh
.circleci/: config.yml
.github/workflows/: build.yml  node_build.yml  python_build.yml  upgrade_chesscog.yml
api/: Dockerfile  pyproject.toml
api/app/: main.py
api/test/: test_main.py
app/: .gitignore  dev.Dockerfile  package-lock.json  package.json
app/docker/: dev.Dockerfile  heroku_nginx.conf  heroku_nginx_template.conf  nginx.conf  prod.Dockerfile
app/public/: index.html
app/src/: index.scss  index.tsx  setupProxy.js
app/src/components/: App.css  App.scss  App.test.tsx  App.tsx  Faq.scss  Faq.tsx  FileUpload.css  FileUpload.scss  FileUpload.test.tsx  FileUpload.tsx  Footer.scss  Footer.tsx  GitHubRibbon.scss  GitHubRibbon.tsx  ImagePreview.tsx  Main.scss  Main.tsx  Recognition.css  Recognition.scss  Recognition.test.tsx  Recognition.tsx  Version.test.tsx  Version.tsx
app/src/core/: api.ts
app/src/styles/: colors.scss  custom-bootstrap.scss  large-button.scss
app/src/utils/: resize.ts
