[tool.poetry]
name = "chesscog-api"
version = "0.1.0"
description = "Chess recognition backend API"
authors = ["Georg Wölflein <georgw7777@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.61.2"
python-chess = "^1.999"
python-multipart = "^0.0.5"
opencv-python = "^4.4.0"
numpy = "^1.19.4"
chesscog = {git = "https://github.com/georgw777/chesscog.git", rev = "0.2.6"}

[tool.poetry.dev-dependencies]
autopep8 = "^1.5.4"
pylint = "^2.6.0"
pytest = "^6.1.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
